--- a/client/package.json
+++ b/client/package.json
@@ -41,9 +41,11 @@
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.43.1",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dompurify": "^3.1.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
