--- a/client/package.json
+++ b/client/package.json
@@ -43,12 +43,14 @@
     "@tanstack/eslint-plugin-query": "^5.43.1",
     "@types/dompurify": "^3.0.5",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "dompurify": "^3.1.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
+    "qrcode": "^1.5.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
