--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
