--- a/Server/.env
+++ b/Server/.env
@@ -15,3 +15,5 @@ GUEST_REFRESH_TOKEN_EXPIRES_IN=12h
 UPLOAD_FOLDER=uploads
 INITIAL_EMAIL_OWNER=admin@order.com
 INITIAL_PASSWORD_OWNER=123456
+
+CLIENT_URL=http://localhost:3000
