--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@tanstack/react-query-devtools": "^5.45.1",
     "@tanstack/react-table": "^8.17.3",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/punycode": "^2.1.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -36,6 +37,7 @@
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "punycode": "^2.3.1",
     "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
