--- a/Server/.env
+++ b/Server/.env
@@ -16,4 +16,11 @@ UPLOAD_FOLDER=uploads
 INITIAL_EMAIL_OWNER=admin@order.com
 INITIAL_PASSWORD_OWNER=123456
 
+# URL dự án Next.js
 CLIENT_URL=http://localhost:3000
+
+# URL redirect về client Next.js khi login bằng google thành công
+GOOGLE_REDIRECT_CLIENT_URL=http://localhost:3000/login/oauth
+GOOGLE_CLIENT_ID=511822443270-428ecepfr99d3o5h9nvio6455vda4v7p.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_AUTHORIZED_REDIRECT_URI=http://localhost:4000/auth/login/google
