--- a/client/.env
+++ b/client/.env
@@ -1,2 +1,5 @@
 NEXT_PUBLIC_API_ENDPOINT=http://localhost:4000
 NEXT_PUBLIC_URL=http://localhost:3000
+
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=511822443270-428ecepfr99d3o5h9nvio6455vda4v7p.apps.googleusercontent.com
+NEXT_PUBLIC_GOOGLE_AUTHORIZED_REDIRECT_URI=http://localhost:4000/auth/login/google
