--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
     "punycode": "^2.3.1",
     "query-string": "^9.0.0",
