--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,3 +1,6 @@
 {
-  "extends": ["plugin:@tanstack/eslint-plugin-query/recommended", "next/core-web-vitals"]
+  "extends": [
+    "next/core-web-vitals",
+    "plugin:@tanstack/eslint-plugin-query/recommended"
+  ]
 }
